--- a/BarberShop/Views/Home/Index.cshtml
+++ b/BarberShop/Views/Home/Index.cshtml
@@ -1,17 +1,19 @@
 ﻿@model BarberShop.Models.Appointments
 
 <div class="appointment-form">
-    <form asp-action="Create" asp-controller="Appointments" method="post" class="form-inline">
+    <form asp-action="BekleyenRandevu" asp-controller="Appointments" method="post" class="form-inline">
         <!-- Ad Soyad -->
         <div class="form-group">
             <label asp-for="FullName"></label>
             <input asp-for="FullName" class="form-control" placeholder="Ad Soyad" />
+            <span asp-validation-for="FullName" class="text-danger"></span>
         </div>
 
         <!-- Telefon -->
         <div class="form-group">
             <label asp-for="PhoneNumber"></label>
             <input asp-for="PhoneNumber" class="form-control" placeholder="Telefon" />
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
 
         <!-- Hizmet -->
@@ -40,6 +42,7 @@
             <input asp-for="Date" class="form-control" type="date" />
             <label asp-for="Time"></label>
             <input asp-for="Time" class="form-control" type="time" />
+            <span asp-validation-for="Date" class="text-danger"></span>
         </div>
 
         <!-- Gönder Butonu -->
