--- a/BarberShop/Views/Home/Hakkimizda.cshtml
+++ b/BarberShop/Views/Home/Hakkimizda.cshtml
@@ -1,12 +1,16 @@
 ﻿@{
     ViewBag.Title = "Hakkımızda";
 }
-
+<style>
+    .about-us {
+        background: rgba(0, 0, 0, 0.5);
+    }
+</style>
 <section class="about-us">
     <div class="container">
         <h1>Hakkımızda</h1>
         <p>
-            Paber Shop, modern ve geleneksel tarzların buluştuğu, eşsiz bir tıraş deneyimi sunan bir mekandır.
+            Barber Shop, modern ve geleneksel tarzların buluştuğu, eşsiz bir tıraş deneyimi sunan bir mekandır.
             Her müşterimizi özel hissettirmek için özenle çalışıyoruz. Profesyonel ekibimiz, yılların getirdiği deneyimle
             her saç ve sakal stiline uygun hizmet sunmaktadır.
         </p>
@@ -18,9 +22,9 @@
             elde etmenize yardımcı oluyoruz.
         </p>
 
-        <h2>İletişim Bilgilerimiz</h2>
         <div class="row">
             <div class="col-md-6">
+                <h2>İletişim Bilgilerimiz</h2>
                 <ul>
                     <li><strong>Telefon:</strong> +90 (123) 456 78 90</li>
                     <li><strong>E-posta:</strong> info@barbershop.com</li>
@@ -28,19 +32,12 @@
                 </ul>
             </div>
             <div class="col-md-6">
-                <div>
-                    <h3>Adresimiz</h3>
-                    <p>Kemalpaşa, 704. Sokak No:1, 54050 Serdivan/Sakarya</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
+                <h2>Adresimiz</h2>
+                <p>Kemalpaşa, 704. Sokak No:1, 54050 Serdivan/Sakarya</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1511.3438936566004!2d30.352632240201874!3d40.746895006217215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14ccb2ee057db479%3A0x43850c6f5015e639!2sArif%20Nihat%20Asya%20Erkek%20%C3%96%C4%9Frenci%20Yurdu!5e0!3m2!1str!2str!4v1734117218747!5m2!1str!2str"
                         width="100%"
                         height="250"
-                        style="border:0; margin-bottom: 20px;"
+                        style="border:0; margin-top: 10px;"
                         allowfullscreen=""
                         loading="lazy">
                 </iframe>
