--- a/BarberShop/Views/Home/Index.cshtml
+++ b/BarberShop/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <!-- Telefon -->
         <div class="form-group">
             <label asp-for="PhoneNumber"></label>
-            <input asp-for="PhoneNumber" class="form-control" placeholder="Telefon" />
+            <input asp-for="PhoneNumber" class="form-control" placeholder="+90(5xx)xxx-xx-xx"/>
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
 
