--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
     <script>
         $(document).ready(function () {
             // Telefon numarası için input mask
-            var phoneMask = '+90(999)999-99-99';
+            var phoneMask = '(999)999-99-99';
             $('#phone').inputmask(phoneMask);
         });
     </script>
