--- a/BarberShop/Views/Admin/PersonelList.cshtml
+++ b/BarberShop/Views/Admin/PersonelList.cshtml
@@ -7,17 +7,17 @@
 <h1>Personel Listesi</h1>
 
 <p>
-    <a asp-action="PersonelEkle">Ekle</a>
+    <a asp-action="PersonelEkle" class="btn btn-success">Personel Ekle</a>
 </p>
 
 <table class="table">
     <thead>
         <tr>
-            <th>Personel Adı</th>
-            <th>Personel Soyadı</th>
+            <th>Adı</th>
+            <th>Soyadı</th>
             <th>Durum</th>
             <th>Hizmetler ve Ücretler</th>
-            <th></th>
+            <th>İşlemler</th>
         </tr>
     </thead>
     <tbody>
@@ -43,9 +43,9 @@
                     }
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@personel.PersonelID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@personel.PersonelID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@personel.PersonelID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@personel.PersonelID" class="btn btn-warning btn-sm">Düzenle</a>
+                    <a asp-action="Details" asp-route-id="@personel.PersonelID" class="btn btn-info btn-sm">Detaylar</a>
+                    <a asp-action="Delete" asp-route-id="@personel.PersonelID" class="btn btn-danger btn-sm">Sil</a>
                 </td>
             </tr>
         }
