--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Yapay Zeka</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="PersonelList">Personel</a>
+                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="PersonelList">Personel İşlemleri</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav me-2 mb-lg-0">
