--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -29,18 +29,18 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Yapay Zeka</a>
                         </li>
-                        <li class="nav-item">
+                        @if (User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Index">Admin Paneli</a>
+                            </li>
+                            <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="PersonelList">Personel İşlemleri</a>
-                        </li>
+                            </li>
+                        }
+                        
                     </ul>
-                    <ul class="navbar-nav me-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Üye Ol</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Giriş Yap</a>
-                        </li>
-                    </ul>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
