Yapay Zeka eklendi

--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Hakkimizda">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Yapay Zeka</a>
+                            <a class="nav-link" asp-area="" asp-controller="Photo" asp-action="ProcessPhoto">Yapay Zeka</a>
                         </li>
                         @if (User.IsInRole(SD.Role_Admin))
                         {
