--- a/BarberShop/Views/Admin/PersonelList.cshtml
+++ b/BarberShop/Views/Admin/PersonelList.cshtml
@@ -1,6 +1,10 @@
 ﻿@model IEnumerable<BarberShop.Models.Personel>
 
 @{
+    Layout = "_AdminLayout";
+    ViewData["Title"] = "Admin Paneli - Ana Sayfa";
+}
+@{
     ViewData["Title"] = "PersonelList";
 }
 
