Admin paneline hizmet eklendi, hatalar düzeltildi

--- a/BarberShop/Views/Admin/HizmetEkle.cshtml
+++ b/BarberShop/Views/Admin/HizmetEkle.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Hizmet Ekle";
 }
+@{
+    Layout = "_AdminLayout";
+}
 
 <h1 style="text-align: center;">Hizmet Ekle</h1>
 
