--- a/BarberShop/Views/Admin/Index.cshtml
+++ b/BarberShop/Views/Admin/Index.cshtml
@@ -27,7 +27,7 @@
             <div class="card-body">
                 <h5 class="card-title">Hizmetler</h5>
                 <p class="card-text">Hizmet ekleyebilir ve düzenleyebilirsiniz.</p>
-                <a href="/admin/settings" class="btn btn-primary">Ayarları Görüntüle</a>
+                <a asp-area="" asp-controller="Admin" asp-action="HizmetList"  class="btn btn-primary">Hizmetleri Görüntüle</a>
             </div>
         </div>
     </div>
