--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -58,7 +58,7 @@
             <i class="fas fa-users"></i> Personel Yönetimi
         </a>
         <a asp-controller="Appointments" asp-action="Randevular"><i class="fas fa-calendar-check"></i> Randevu Yönetimi</a>
-        <a asp-controller="Admin" asp-action="UserList"><i class="fas fa-calendar-check"></i> Kullanıcılar</a>
+        <a asp-controller="Admin" asp-action="HizmetList"><i class="fas fa-calendar-check"></i> Hizmetler</a>
         
     </div>
 
